# art-tactile-transform

./: .dockerignore  .env  .env.example  .gitignore  CLEANUP_SUMMARY.md  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LAUNCHER.md  README.Docker.md  README.md  TASK_COMPLETION_REPORT.md  TESTING.md  UPGRADE_SUMMARY.md  conftest.py  docker-compose.yml  launch.bat  launch.ps1  launch.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_gui_processing.py  test_gui_wrapper.py  test_model_direct.py  thoughts  verify_implementation.py
config/: example.env
docs/: ARCHITECTURE.md  MERGE_COMPLETE.md  MIGRATION.md  PARALLEL_DEVELOPMENT_SUMMARY.md  non_technical_run_guide.md
docs/learning/: 01_introduction_to_art_tactile_transform.ipynb  02_depth_estimation_ai_concepts.ipynb  03_image_processing_techniques.ipynb  04_3d_modeling_stl_generation.ipynb
docs/prd/: tactile-art-gui-v2.md
docs/ui-mockups/: README.md  design-system.md
docs/ui-mockups/components/: 3d-viewer.md  export-dialog.md  upload-dialog.md
docs/ui-mockups/wireframes/: main-application.md  parameter-panels.md
docs/ui-mockups/workflows/: user-flows.md
src/: main.py
src/art_tactile_transform/: __init__.py  cli.py  gui.py  main.py  semantic_processing.py
src/art_tactile_transform/core/: __init__.py  image_processing.py  mesh_generation.py  validation.py
src/art_tactile_transform/models/: __init__.py  parameters.py  presets.py
src/art_tactile_transform/processing/: __init__.py  depth_estimation.py  semantic_mapping.py
src/art_tactile_transform/utils/: __init__.py  file_handling.py  logging.py
tactile_transformer/: ai-assisted.py  map.py  visulaize.py
tests/: __init__.py  test_cli.py  test_depth_vs_semantic.py  test_functions.py  test_image_processing.py  test_integration.py  test_main.py  test_semantic_processing.py  test_stl_generation.py
tests/core/: test_image_processing.py  test_mesh_generation.py
tests/fixtures/: README.md
tests/models/: __init__.py
tests/processing/: __init__.py
tests/proof_of_functionality/: Mona_Lisa_tactile.stl
tests/utils/: __init__.py
windows/: README.txt  install.bat  launcher.bat  requirements-core.txt  requirements-pytorch.txt
