[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "art-tactile-transform"
version = "0.1.0"
description = "Transform flat images into 3D printable tactile representations using AI depth estimation"
authors = ["Your Name <email@example.com>"]
readme = "README.md"
packages = [{include = "art_tactile_transform", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.0.0"
pillow = "^10.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
scipy = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
pytest-mock = "^3.12.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
art-tactile-transform = "art_tactile_transform.main:main"
run-tests = "run_tests:main"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true