[project]
name = "art-tactile-transform"
version = "0.1.0"
description = "Transform flat images into 3D printable tactile representations using AI depth estimation"
authors = [
    {name = "Justin Robinson", email = "justin.g.robinson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "transformers>=4.0.0",
    "gradio>=4.0.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
gui = [
    "gradio>=4.0.0",
]
all = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "gradio>=4.0.0",
]

[project.scripts]
art-tactile-cli = "art_tactile_transform.cli:main"
art-tactile-gui = "art_tactile_transform.gui:main"
art-tactile-transform = "art_tactile_transform.cli:main"
run-tests = "run_tests:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/art_tactile_transform"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
]
